# transformer_archi

./: .gitignore  README.md  c  index.html  main.py  pyproject.toml  state_of_the_art_chatgtp2.py  tailwind.config.ts
assets/beamer/: Makefile  main.tex
assets/research/: .latexmkrc  Development.md  main.tex  refs1.bib
beamer/: main.tex
checkpoints/: last_checkpoint.pth
deprecated/: main.py  utils.py
research/: Development.md  main.tex  references.bib  refs1.bib
src/: config.py  index.css  main.py  state_of_the_art_chatgtp2.py  utils.py
src/components/: About.tsx  Contact.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  Projects.tsx
src/components/ui/: button.tsx
src/pages/: Index.tsx
src/psiformer_torch/: config.py  hamiltonian.py  kinetic_term_test_2.py  main.py  mc_test.py  mcmc.py  psiformer.py  test.py  train.py
src/psiformer_torch/checkpoints/: last_checkpoint.pth
src/psiformer_torch/tests/: kinetic_term_test.py  mc_test.py  test.py
tests/: mcmc_test.py  psiformer_test.py  test copy 2.py  test copy 3.py  test copy.py  test.py  test_config.py
