[project]
name = "psiformer-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
]

[dependency-groups]
laptop = [
    "torch>=2.9.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
default = true
